date instead of number

--- a/tournaments/templates/tournaments/matches.html
+++ b/tournaments/templates/tournaments/matches.html
@@ -23,9 +23,7 @@
                   {{ match.stage.name }}
                 </a>
               </td>
-              <!-- Match Number -->
-              <td class="py-3 px-6">{{ match.number }}</td>
-              <!-- Match Info (Clickable) -->
+              <td class="py-3 px-6">{{ match.start_time }}</td>
               <td class="py-3 px-6 font-semibold">
                 <a
                   href="/tournaments/{{tournament.tournament_id}}/matches/{{match.match_id}}"
