update table header

--- a/tournaments/templates/tournaments/matches.html
+++ b/tournaments/templates/tournaments/matches.html
@@ -6,7 +6,7 @@
         <thead class="bg-blue-600 text-white">
           <tr>
             <th class="py-3 px-6 text-left">Stage</th>
-            <th class="py-3 px-6 text-left">#</th>
+            <th class="py-3 px-6 text-left">Date</th>
             <th class="py-3 px-6 text-left">Match</th>
             <th class="py-3 px-6 text-left">Start Time</th>
           </tr>
